LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Accept_Decline_Stage_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Accept_Decline_Stage_for_Reports__c</fullName>
    <label>Accept/Decline Stage (for Reports)</label>
    <type>DateTime</type>
</CustomField>