LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Add_to_marketing_mailing_list__c.field-meta.xml
<CustomField>
    <fullName>Add_to_marketing_mailing_list__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would like to share our marketing mailers with the client</inlineHelpText>
    <label>Add to marketing mailing list</label>
    <type>Checkbox</type>
</CustomField>