LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/AgingAsOnCreatedDateInDays__c.field-meta.xml
<CustomField>
    <fullName>AgingAsOnCreatedDateInDays__c</fullName>
    <description>It depicts the aging of a particular lead.</description>
    <label>Aging As On Created Date (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>