LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Board_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Board_of_Directors__c</fullName>
    <inlineHelpText>Name, designation and email of Client&apos;s Board of Directors</inlineHelpText>
    <label>Board of Directors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>