LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Book_a_meeting__c.field-meta.xml
<CustomField>
    <fullName>Book_a_meeting__c</fullName>
    <formula>IF( ISPICKVAL( Would_you_like_to_talk_to_an_expert__c , &apos;Yes&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book a meeting</label>
    <type>Checkbox</type>
</CustomField>