LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/BUEL_Solutions_Council__c.field-meta.xml
<CustomField>
    <fullName>BUEL_Solutions_Council__c</fullName>
    <formula>If(ISPICKVAL(Enquiry_Type__c ,&apos;Business as Usual (BAU)&apos;),&apos;respective BU Ecosystem Leader (BUEL)&apos;,&apos;Solutions Council&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUEL/Solutions Council</label>
    <type>Text</type>
</CustomField>