LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CAGR__c.field-meta.xml
<CustomField>
    <fullName>CAGR__c</fullName>
    <inlineHelpText>Compounded Annual Growth Rate (CAGR%)</inlineHelpText>
    <label>Compounded Annual Growth Rate (CAGR%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>