LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign lookup should be dependent field for Campaign referral</description>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Campaign.Client__c</field>
            <operation>notEqual</operation>
            <value>Null</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>New Clients</relationshipLabel>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>