LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>