LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CCApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CCApprovalStatus__c</fullName>
    <description>It depicts the Approval status for particular lead.</description>
    <inlineHelpText>Client Take-On Approval Status</inlineHelpText>
    <label>CC_Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>