LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CCApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>CCApprovedRejectedBy__c</fullName>
    <description>It depicts which member from CC Team has Approved / Rejected.</description>
    <inlineHelpText>Client Council - Approved / Rejected by</inlineHelpText>
    <label>CC_Approved / Rejected By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>