LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CCApprovedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>CCApprovedRejectedDate__c</fullName>
    <description>It depicts Approved / Rejected date from CC Team.</description>
    <inlineHelpText>Client Council - Approved / Rejected Date</inlineHelpText>
    <label>CC_Approved / Rejected Date</label>
    <type>Date</type>
</CustomField>