LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name__c</fullName>
    <inlineHelpText>CEO of the Client</inlineHelpText>
    <label>CEO Name</label>
    <type>TextArea</type>
</CustomField>