LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Chamber__c.field-meta.xml
<CustomField>
    <fullName>Chamber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which Chamber has referred this lead.</description>
    <label>Referred By Chamber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>