LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Channel_query_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_query_Request_Type__c</fullName>
    <label>Channel &amp; query Request Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>