LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Channel_Text_Quip__c.field-meta.xml
<CustomField>
    <fullName>Channel_Text_Quip__c</fullName>
    <formula>IF( ISPICKVAL( LeadSource , &apos;Manual&apos;) ,&apos;Enquiry through &apos; &amp; CreatedBy.FirstName &amp;&apos; &apos; &amp; CreatedBy.MiddleName  &amp;&apos; &apos;&amp;  CreatedBy.LastName &amp;&apos;  connect with &apos; &amp; FirstName &amp;&apos; &apos;&amp; MiddleName &amp;&apos;&apos;&amp; LastName &amp;&apos;, &apos;   &amp;  Designation__c ,&apos;New Client through Web/ email/ Chatbot/ Pardot.&apos; &amp; 
 FirstName &amp;&apos; &apos; &amp;  MiddleName &amp;&apos; &apos;&amp;  LastName &amp;&apos;, &apos;&amp; Designation__c &amp;&apos; is our main point of contact.&apos;
)</formula>
    <label>Channel Text (Quip)</label>
    <type>Text</type>
</CustomField>