LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Council_Partner_to_evaluate_fur__c.field-meta.xml
<CustomField>
    <fullName>Client_Council_Partner_to_evaluate_fur__c</fullName>
    <label>Client Council/Partner evaluate further</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>