LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Name__c</fullName>
    <label>Immediate Parent Name</label>
    <type>TextArea</type>
</CustomField>