LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Group_Name_CIQID__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Name_CIQID__c</fullName>
    <label>Client Group Name_CIQID</label>
    <type>TextArea</type>
</CustomField>