LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Prework_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Prework_Change_Date__c</fullName>
    <label>Client Prework Change Date</label>
    <type>Date</type>
</CustomField>