LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Take_On_PreWork_stageDate_Report__c.field-meta.xml
<CustomField>
    <fullName>Client_Take_On_PreWork_stageDate_Report__c</fullName>
    <label>Client Take-On PreWork stageDate(Report)</label>
    <type>DateTime</type>
</CustomField>