LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Client_Take_On_Stage_Date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Client_Take_On_Stage_Date_for_Reports__c</fullName>
    <label>Client Take On Stage Date(for Reports)</label>
    <type>DateTime</type>
</CustomField>