LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ClientBackground__c.field-meta.xml
<CustomField>
    <fullName>ClientBackground__c</fullName>
    <description>It depicts Client Background.</description>
    <label>Client Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>