LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ClientContact__c.field-meta.xml
<CustomField>
    <fullName>ClientContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which Client Contact has referred this Lead.</description>
    <inlineHelpText>Referral from existing client contact</inlineHelpText>
    <label>Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>