LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Closing_Price__c.field-meta.xml
<CustomField>
    <fullName>Closing_Price__c</fullName>
    <inlineHelpText>in INR</inlineHelpText>
    <label>Closing Price</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>