LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CMSpoc__c.field-meta.xml
<CustomField>
    <fullName>CMSpoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which user has referred this lead.</description>
    <label>C&amp;M SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>