LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/COCSL__c.field-meta.xml
<CustomField>
    <fullName>COCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which CO-CSL user has referred this lead.</description>
    <label>CO-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>