LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <label>Commercial</label>
    <type>TextArea</type>
</CustomField>