LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <label>Client Overview</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>