LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Company_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_No__c</fullName>
    <inlineHelpText>Client phone number</inlineHelpText>
    <label>Client Phone Number</label>
    <type>Phone</type>
</CustomField>