LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <inlineHelpText>New client website</inlineHelpText>
    <label>New Client Website</label>
    <type>Url</type>
</CustomField>