LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CompanyHQ__c.field-meta.xml
<CustomField>
    <fullName>CompanyHQ__c</fullName>
    <inlineHelpText>Client headquarters</inlineHelpText>
    <label>Client HQ</label>
    <type>Address</type>
</CustomField>