LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Completed_Steps__c</fullName>
    <label>Completed Steps</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>