LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeClientConnectStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeClientConnectStageDate__c</fullName>
    <label>Compute Client Connect Stage Date</label>
    <type>Date</type>
</CustomField>