LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeClientCouncilStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeClientCouncilStageDate__c</fullName>
    <label>Compute Client Council Stage Date</label>
    <type>Date</type>
</CustomField>