LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeClientPreWorkStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeClientPreWorkStageDate__c</fullName>
    <label>Compute Client PreWork Stage Date</label>
    <type>Date</type>
</CustomField>