LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeClientTakeOnStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeClientTakeOnStageDate__c</fullName>
    <inlineHelpText>New client headquarters</inlineHelpText>
    <label>Compute Client Take On Stage Date</label>
    <type>Date</type>
</CustomField>