LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeFeasibilityAnalysisStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeFeasibilityAnalysisStageDate__c</fullName>
    <label>Compute Feasibility Analysis Stage Date</label>
    <type>Date</type>
</CustomField>