LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeInternalExternalStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeInternalExternalStageDate__c</fullName>
    <inlineHelpText>New client phone number</inlineHelpText>
    <label>Compute Internal / External Stage Date</label>
    <type>Date</type>
</CustomField>