LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeNewStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeNewStageDate__c</fullName>
    <inlineHelpText>New client CapIQ status</inlineHelpText>
    <label>Compute New Stage Date</label>
    <type>Date</type>
</CustomField>