LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputeNotAcceptedClientStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputeNotAcceptedClientStageDate__c</fullName>
    <inlineHelpText>New client website</inlineHelpText>
    <label>Compute Not Accepted Client Stage Date</label>
    <type>Date</type>
</CustomField>