LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ComputePreQualificationStageDate__c.field-meta.xml
<CustomField>
    <fullName>ComputePreQualificationStageDate__c</fullName>
    <label>Compute Pre Qualification Stage Date</label>
    <type>Date</type>
</CustomField>