LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Converted_Client__c.field-meta.xml
<CustomField>
    <fullName>Converted_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the converted client information.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries(Converted Client1)</relationshipLabel>
    <relationshipName>Enquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>