LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Corridor__c.field-meta.xml
<CustomField>
    <fullName>Corridor__c</fullName>
    <inlineHelpText>GT Business corridor</inlineHelpText>
    <label>Corridor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Countries__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Corridor</valueSetName>
    </valueSet>
</CustomField>