LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <inlineHelpText>Country of incorporation</inlineHelpText>
    <label>Country of Incorporation</label>
    <type>TextArea</type>
</CustomField>