LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <inlineHelpText>Country code of contact number</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_Name</valueSetName>
    </valueSet>
</CustomField>