LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Created_By_CapIQ__c.field-meta.xml
<CustomField>
    <fullName>Created_By_CapIQ__c</fullName>
    <label>Created By CapIQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>