LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CrossSell__c.field-meta.xml
<CustomField>
    <fullName>CrossSell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Sell</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>