LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CSP__c.field-meta.xml
<CustomField>
    <fullName>CSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads6</relationshipName>
    <type>Lookup</type>
</CustomField>