LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>Currency_Format__c</fullName>
    <label>Currency Format</label>
    <length>60</length>
    <type>Text</type>
</CustomField>