LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Current_Auditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Auditor_Name__c</fullName>
    <label>Current Auditor Name</label>
    <type>TextArea</type>
</CustomField>