LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Current_Steps__c.field-meta.xml
<CustomField>
    <fullName>Current_Steps__c</fullName>
    <label>Current Steps</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>