LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/CurrentBODcompanyDateofAppointmen__c.field-meta.xml
<CustomField>
    <fullName>CurrentBODcompanyDateofAppointmen__c</fullName>
    <label>Current BOD company&amp;Date of Appointment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>