LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Day_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Day_Since_Last_Modified__c</fullName>
    <formula>TODAY() - Temp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>