LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/DBEnquiryAge__c.field-meta.xml
<CustomField>
    <fullName>DBEnquiryAge__c</fullName>
    <description>This is a field that is  used with the Adoption Dashboard AppExchange package.</description>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Enquiry Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>