LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Domestic_Ultimate_Owner__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Owner__c</fullName>
    <inlineHelpText>Highest level parent within a corporate family tree that is domiciled in the same country</inlineHelpText>
    <label>Domestic Ultimate Owner</label>
    <type>TextArea</type>
</CustomField>