LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Duplicate_New_Client_Already_Converted__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_New_Client_Already_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to indicate if any of the duplicate record is already converted.</description>
    <label>Duplicate Enquiry Already Converted</label>
    <type>Checkbox</type>
</CustomField>